# app-django

./: README.md  pyproject.toml
src/app_py/: __init__.py
