[project]
name = "app-py"
version = "0.1.0"
description = "A Python app template with CI/CD and best practices."
readme = "README.md"
authors = [
    { name = "Yousef Abu Shanab", email = "93343012+youzarsiph@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app-py = "app_py:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.11.0"]
build-backend = "uv_build"
